ansible/playbooks/roles/microk8s_homepage/templates/ingress_homepage.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: homepage-ingress
  namespace: homepage
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 192.168.1.203.nip.io
      secretName: https-homepage
  rules:
    - host: 192.168.1.203.nip.io
      http:
        paths:
          - path: /homepage
            pathType: Prefix
            backend:
              service:
                name: homepage-service
                port:
                  number: 80
